<resources>
    <string name="app_name">Chattr App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_register">Đăng ký</string>
    <string name="hint_email_input">Email</string>
    <string name="hint_password_input">Mật khẩu</string>
    <string name="text_password_description">Hiện mật khẩu</string>
    <string name="text_get_password">Lấy lại mật khẩu</string>
    <string name="text_description_fullname">Nhập họ và tên đầy đủ</string>
    <string name="hint_fullname_input">Nhập họ và tên</string>
    <string name="hint_phone_input">Số điện thoại</string>
    <string name="text_desciption_phone">Nhập số điện thoại liên lạc</string>
    <string name="radio_male">Nam</string>
    <string name="radio_female">Nữ</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="text_notifiy_otp">Mã OTP đang được gửi đến số máy\n%1$s!</string>
    <string name="text_waitting_message">Vui lòng mở tin nhắn để nhận mã</string>
    <string name="menu_messages_title">Tin nhắn</string>
    <string name="menu_profile_title">Cá nhân</string>
    <string name="menu_contacts_title">Danh bạ</string>
    <string name="menu_group_title">Nhóm</string>
    <string name="button_update_info">Cập nhật thông tin</string>
    <string name="button_update">Cập nhật</string>
    <string name="button_update_password">Đổi mật khẩu</string>
    <string name="button_logout">Đăng xuất</string>
    <string name="hint_old_password">Mật khẩu cũ</string>
    <string name="hint_new_password">Mật khẩu mới</string>
    <string name="hint_repeat_new_password">Nhập lại mật khẩu mới</string>
    <string name="text_create_new_password">Tạo mật khẩu mới</string>
    <string name="text_input_otp">Nhập mã xác thực</string>
    <string name="text_warning_protect_otp">Vui lòng không chia sẻ mã xác thực để tránh mất tài khoản</string>
    <string name="text_confirm_logout">Bạn có muốn đăng xuất tài khoản này?</string>
</resources>