<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarProfile"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/imageBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/banner_start" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:scaleType="center" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageUserSmall"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
                <TextView
                    android:id="@+id/txtUsername"
                    android:textStyle="bold"
                    android:textColor="@color/colorIcons"
                    android:textSize="20sp"
                    android:paddingStart="10dp"
                    android:text="Tên người dùng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_anchor="@+id/appBarProfile"
        app:layout_anchorGravity="bottom|center" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        android:paddingTop="50dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnUpdateInfo"
                style="@style/buttonInProfileLayout"
                android:text="@string/button_update_info" />

            <Button
                android:id="@+id/btnUpdatePassword"
                style="@style/buttonInProfileLayout"
                android:text="@string/button_update_password" />

            <Button
                android:id="@+id/btnLogout"
                style="@style/buttonInProfileLayout"
                android:text="@string/button_logout" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>